<resources>
    <string name="app_name">Arous El Sham</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">Orders</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="register_message">let\'s start with create your account</string>
    <string name="text_continue">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_a_new_meal">Add A New Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price_by_selection">Price by selection</string>
    <string name="total_price">Total</string>
    <string name="currency">EGP</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="sign_out">Sign out</string>
    <string name="edit">Edit</string>
    <string name="account_info">Account Info</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="english">English</string>
    <string name="street_name">Street Name</string>
    <string name="area">Area</string>
    <string name="building_number">Building Number</string>
    <string name="floor_number">Floor Number</string>
    <string name="apartment_number">Apartment Number</string>
    <string name="landmark_group_numbwe_etc">Landmark, group numbwe, etc</string>
    <string name="landline_number_optional">Landline number (optional)</string>
    <string name="office">Office</string>
    <string name="type_of_building">Type of building</string>
    <string name="villa">Villa</string>
    <string name="save_address">Save Address</string>
    <string name="apartment">Apartment</string>
    <string name="email">Email</string>
    <string name="date_od_birth">Date of birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="p1">Yes, I want to revice offers and discounts</string>
    <string name="p2">Subscribe to newsletter</string>
    <string name="save">Save</string>
    <string name="new_email">New Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="submit">Submit</string>
    <string name="f_name_null">First name can\'t be empty</string>
    <string name="l_name_null">Last name can\'t be empty</string>
    <string name="phone_number_null">Phone number can\'t be empty</string>
    <string name="email_null">Email can\'t be empty</string>
    <string name="add_address">Add address</string>
    <string name="cant_be_empty">this field can\'t be empty!</string>
    <string name="estimated_time">Estimated time</string>
    <string name="order_number">Order number</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_placed_your_order">We have placed your order</string>
    <string name="order_is_cooking">Order is cooking</string>
    <string name="we_are_now_getting_your_order_ready">We are now getting your order ready</string>
    <string name="order_is_delivering">Order is delivering</string>
    <string name="your_order_is_ready_to_be_delivered">Your order is ready to be delivered</string>
    <string name="previous_order_s">Previous order\'s</string>
    <string name="cahs_on_delivery">Cash on delivery</string>
    <string name="paypal">Paypal</string>
    <string name="cradited_card">CreditedCard</string>
</resources>