<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.arouselsham.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment">

        <argument
            android:name="listOfMeals"
            android:defaultValue="None" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_about"
            app:destination="@id/navigation_about"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_settings"
            app:destination="@id/navigation_settings"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_navigation_home_to_navigation_search"
            app:destination="@id/navigation_search"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <action
            android:id="@+id/action_navigation_home_to_sectionFragment"
            app:destination="@id/sectionFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/sectionFragment"
        android:name="com.example.arouselsham.ui.section.SectionFragment"
        android:label="{section}"
        tools:layout="@layout/section_fragment">

        <action
            android:id="@+id/action_sectionFragment_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="section"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.arouselsham.ui.details.DetailsFragment"
        android:label="Details"
        tools:layout="@layout/details_fragment">
        <argument
            android:name="meal"
            app:argType="com.example.arouselsham.pojo.model.male.Meal" />
    </fragment>

    <fragment
        android:id="@+id/navigation_about"
        android:name="com.example.arouselsham.ui.about.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/about_fragment" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.arouselsham.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.arouselsham.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/settings_fragment">
        <action
            android:id="@+id/action_navigation_settings_to_accountInfoFragment"
            app:destination="@id/accountInfoFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_navigation_settings_to_savedAddressesFragment"
            app:destination="@id/savedAddressesFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.arouselsham.ui.favorite.FavoriteFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/favorite_fragment">
        <action
            android:id="@+id/action_navigation_offers_to_detailsFragment"
            app:destination="@id/detailsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.arouselsham.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/cart_fragment">
        <action
            android:id="@+id/action_navigation_cart_to_savedAddressesFragment2"
            app:destination="@id/savedAddressesFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.arouselsham.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/favorite_fragment" />

    <fragment
        android:id="@+id/addAddressFragment"
        android:name="com.example.arouselsham.ui.addAddress.AddAddressFragment"
        android:label="@string/add_address"
        tools:layout="@layout/add_address_fragment">

        <argument
            android:name="address"
            app:argType="com.example.arouselsham.pojo.model.UserAddress" />

    </fragment>

    <fragment
        android:id="@+id/confirmPaymentFragment"
        android:name="com.example.arouselsham.ui.confirmPayment.ConfirmPaymentFragment"
        android:label="Confirm Payment"
        tools:layout="@layout/confirm_payment_fragment">
        <argument
            android:name="order"
            app:argType="com.example.arouselsham.pojo.model.Order"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/accountInfoFragment"
        android:name="com.example.arouselsham.ui.accountInfo.AccountInfoFragment"
        android:label="@string/account_info"
        tools:layout="@layout/account_info_fragment" />

    <fragment
        android:id="@+id/savedAddressesFragment"
        android:name="com.example.arouselsham.ui.savedAddresses.SavedAddressesFragment"
        android:label="@string/saved_addresses"
        tools:layout="@layout/saved_addresses_fragment">
        <action
            android:id="@+id/action_savedAddressesFragment_to_addAddressFragment"
            app:destination="@id/addAddressFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="isItSelectAddress"
            app:argType="boolean" />
        <action
            android:id="@+id/action_savedAddressesFragment_to_paymentMethodFragment"
            app:destination="@id/paymentMethodFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

    </fragment>
    <fragment
        android:id="@+id/paymentMethodFragment"
        android:name="com.example.arouselsham.ui.paymentMethod.PaymentMethodFragment"
        android:label="PaymentMethodFragment"
        tools:layout="@layout/payment_method_fragment">
        <argument
            android:name="order"
            app:argType="com.example.arouselsham.pojo.model.Order"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_paymentMethodFragment_to_confirmPaymentFragment"
            app:destination="@id/confirmPaymentFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>


</navigation>